first tablet responsive design

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -27,4 +27,20 @@
         line-height: 2;
 
     }
+
+    @include media-tablet {
+        &__profile-container {
+            &-img {
+                margin: auto;
+
+            }
+
+
+        }
+
+        &__more-info {
+            clear: both;
+            padding: 1rem;
+        }
+    }
 }
